[package]
name = "pswdmng"
version = "0.1.0"
authors = ["nabe <e.cfcg9dagego9h9edeofadafeeoed@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.1" }
rusqlite = { version = "0.23.1", features = ["bundled"] }
