[package]
name = "pswdmng"
version = "0.1.0"
authors = ["nabe <e.cfcg9dagego9h9edeofadafeeoed@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.6.0" , features=["aes"] }
clap = { version = "2.33.1" }
rand = { version = "0.7.3" }
rusqlite = { version = "0.23.1", features = ["bundled"] }
sha3 = { version = "0.9.1" }
